--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -13,6 +13,11 @@
     letter-spacing: 0.03em;
     color: #212121;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 768px) {
+        font-size: 28px;
+        line-height: calc(33/28);
+    }
 }
 
 .team-list-titel {
@@ -26,19 +31,38 @@
 }
 
 .team__list {
-    display: flex;
-    justify-content: center;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        }
 }
 
 .team__item {
-    margin-right: 30px;
+
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+        margin-bottom: 30px;
+            }
+        }
+    
+        @media screen and (min-width: 768px) {
+        width: calc((100% - 30px) / 2);
+        }
+    
+        @media screen and (min-width: 1200px) {
+        width: calc((100% - 90px) / 4);
+        }
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
-    &:last-child {
-    margin-right: 0;
-}
 }
 
 
