--- a/scss/components/_robota.scss
+++ b/scss/components/_robota.scss
@@ -1,6 +1,9 @@
 .robota {
     padding-top: 94px;
     padding-bottom: 94px;
+    @media screen and (max-width: 1199px) {
+        display: none;
+    }
 }
 
 .robota__list {
