--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-  width: 100%;
 }
 
 .list {
@@ -427,23 +426,29 @@ textarea {
 
 .team {
   background-color: #F5F4FA;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (max-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-titel {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1785714286;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 50px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .team-titel {
-    font-size: 28px;
-    line-height: 1.1785714286;
+    font-size: 36px;
+    line-height: 1.1666666667;
   }
 }
 
@@ -496,7 +501,7 @@ textarea {
 }
 @media screen and (min-width: 1200px) {
   .team__item {
-    width: calc((100% - 90px) / 4);
+    width: calc((100% - 30px) / 4);
   }
 }
 
@@ -720,6 +725,11 @@ textarea {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .robota {
+    display: none;
+  }
+}
 
 .robota__list {
   display: -webkit-box;
@@ -777,9 +787,11 @@ textarea {
 }
 
 .hero {
-  max-width: 1600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background-color: #2F303A;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/fon.jpg);
@@ -788,32 +800,67 @@ textarea {
   background-position: center;
   background-size: cover;
 }
+@media screen and (max-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
 
 .osnov-title {
-  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
   margin: 0 auto 30px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3636363636;
+  font-size: 26px;
+  line-height: 1.6153846154;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #FFFFFF;
 }
+@media screen and (max-width: 1200px) {
+  .osnov-title {
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
+}
 
 .info {
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .info {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .info-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
-.info-item {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .info-item:not(:last-child) {
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .info-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .info-item {
+    width: calc((100% - 30px) / 4);
+  }
 }
 .info-item::before {
   display: block;
@@ -864,18 +911,30 @@ textarea {
 }
 
 .client {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .client {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .client-titel {
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1428571429;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .client-titel {
+    font-size: 36px;
+    line-height: 1.1666666667;
+  }
 }
 
 .client-link {
@@ -889,7 +948,7 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
   height: 92px;
-  width: 170px;
+  width: 100%;
   background-color: #FFFFFF;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
@@ -906,7 +965,30 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
+}
+
+.client-item {
+  width: 100%;
+  height: 92px;
+  width: calc((100% - 30px) / 2);
+}
+@media screen and (max-width: 767px) {
+  .client-item:not(:last-child) {
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .client-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client-item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .menu-list {
@@ -1030,9 +1112,6 @@ textarea {
 }
 
 .end {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   background-color: #2F303A;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1042,9 +1121,39 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .end-flex {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .end-flex {
+    gap: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .end-flex {
+    text-align: justify;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .logo-pre-title {
@@ -1113,9 +1222,10 @@ textarea {
   margin-bottom: 20px;
 }
 
-.link-ss {
-  width: 206px;
-  margin-left: 70px;
+@media screen and (max-width: 1200px) {
+  .link-ss {
+    margin-left: 70px;
+  }
 }
 
 .link-ss__list {
@@ -1150,8 +1260,32 @@ textarea {
   background-color: #2196F3;
 }
 
-.mailing-list {
-  margin-left: 93px;
+@media screen and (max-width: 1199px) {
+  .mailing-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 30px auto 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mailing-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: auto;
+  }
 }
 
 .mailing-list input {
@@ -1182,6 +1316,31 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media screen and (max-width: 1199px) {
+  .form-email {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-email {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .mailing-text {
