--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -1,17 +1,26 @@
 .client {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and(min-width:1200px){
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 
 }
 
 .client-titel {
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42/36);
+    font-size: 28px;
+    line-height: calc(32/28);
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
+
+    @media screen and(min-width:1200px){
+        font-size: 36px;
+        line-height: calc(42/36);
+    }
 
 }
 
@@ -20,7 +29,7 @@
     justify-content: center;
     align-items: center;
     height: 92px;
-    width: 170px;
+    width: 100%;
     background-color: #FFFFFF;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
@@ -39,5 +48,26 @@
 
 .client-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
+
+}
+.client-item {
+    width: 100%;
+    height: 92px;
+    width: calc((100% - 30px) / 2);
+
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+            gap: 30px;
+        }
+    }
+    
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 60px) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: calc((100% - 150px) / 6);
+    }
 }
