--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -71,8 +71,9 @@
 }
 
 .link-ss {
-    width: 206px;
+    @media screen and(max-width:1200px){
     margin-left: 70px;
+    }
 }
 
 .link-ss__list {
@@ -101,7 +102,18 @@
 
 
 .mailing-list {
-    margin-left: 93px;
+    @media screen and (max-width: 1199px) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: 30px auto 0;
+        }
+    
+        @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        }
 }
 
 .mailing-list input {
@@ -128,6 +140,17 @@
 .form-email {
     display: flex;
     align-items: center;
+    @media screen and (max-width: 1199px) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            display: flex;
+            align-items: center;
+        }
 }
 
 .mailing-text {
@@ -154,6 +177,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     margin-left: 12px;
+
 }
 
 .mailing-list-icon {
