--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,10 @@
 .hero {
-    max-width: 1600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    //max-width: 1600px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     text-align: center;
     background-color: #2F303A;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
@@ -11,33 +14,65 @@
     background-position: center;
     background-size: cover;
 
+    @media screen and(max-width:1200px){
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
+
 
 }
 
 .osnov-title {
-    width: 696px;
+    margin-left: auto;
+    margin-right: auto;
+    //width: 696px;
     margin: 0 auto 30px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60/44);
+    font-size: 26px;
+    line-height: calc(42/26);
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
+
+    @media screen and(max-width:1200px){
+        font-size: 44px;
+        line-height: calc(60/44);
+    }
 }
 
 .info {
-    padding-top: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and(min-width:1200px){
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .info-list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 
 }
 
 .info-item {
-    margin-right: 30px;
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+        gap: 30px;
+        }
+    }
+    
+        @media screen and (min-width: 768px) {
+        width: calc((100% - 30px) / 2);
+        }
+    
+        @media screen and (min-width: 1200px) {
+        width: calc((100% - 30px) / 4);
+        }
+
     
 &::before {
     display: block;
