--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -110,7 +110,6 @@
 }
 
 .end {
-    display: flex;
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
@@ -119,8 +118,25 @@
 
 .end-flex {
     display: flex;
-    align-items: baseline;
-}
+    text-align: center;
+    flex-direction: column;
+    
+    @media screen and (min-width: 768px) {
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: baseline;
+        }
+    
+        @media screen and (max-width: 1199px) {
+        gap: 60px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+        text-align: justify;
+        align-items: baseline;
+        }
+    }
 
 .logo-pre-title {
     color: #FFFFFF;
