--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
 
 .list {
@@ -462,6 +463,14 @@ textarea {
   margin-bottom: 10px;
 }
 
+.team__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
 @media screen and (min-width: 768px) {
   .team__list {
     display: -webkit-box;
@@ -484,6 +493,7 @@ textarea {
 }
 
 .team__item {
+  width: 100%;
   background: #FFFFFF;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -491,7 +501,7 @@ textarea {
 }
 @media screen and (max-width: 767px) {
   .team__item:not(:last-child) {
-    margin-bottom: 30px;
+    gap: 30px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -501,7 +511,7 @@ textarea {
 }
 @media screen and (min-width: 1200px) {
   .team__item {
-    width: calc((100% - 30px) / 4);
+    width: calc((100% - 90px) / 4);
   }
 }
 
@@ -800,7 +810,7 @@ textarea {
   background-position: center;
   background-size: cover;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -859,7 +869,7 @@ textarea {
 }
 @media screen and (min-width: 1200px) {
   .info-item {
-    width: calc((100% - 30px) / 4);
+    width: calc((100% - 150px) / 4);
   }
 }
 .info-item::before {
@@ -900,6 +910,11 @@ textarea {
   text-transform: uppercase;
   color: #212121;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .info-title {
+    text-align: center;
+  }
 }
 
 .info-pre-item {
@@ -1135,8 +1150,6 @@ textarea {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
