--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -35,6 +35,10 @@
 }
 
 .team__list {
+    display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        
     @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -49,19 +53,20 @@
 }
 
 .team__item {
-
-    @media screen and (max-width: 767px) {
-        &:not(:last-child) {
-        margin-bottom: 30px;
+    width: 100%;
+    
+        @media screen and (max-width: 767px) {
+            &:not(:last-child) {
+                gap: 30px;
             }
         }
     
         @media screen and (min-width: 768px) {
-        width: calc((100% - 30px) / 2);
+            width: calc((100% - 30px) / 2);
         }
     
         @media screen and (min-width: 1200px) {
-        width: calc((100% - 30px) / 4);
+            width: calc((100% - 90px) / 4);
         }
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
